fixed enquiry spacing

--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -252,6 +252,7 @@ enquiry
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
+	margin-top: 1rem;
 	/* gap: 3rem; */
 }
 .enquiry-wrapper .right img {
@@ -422,6 +423,7 @@ enquiry
 	.enquiry-wrapper .right .right-cont {
 		display: flex;
 		/* background-color: red; */
+		margin-top: 0rem;
 		padding: 1rem 0;
 		align-items: start;
 
